--- a/sidepanel/index.html
+++ b/sidepanel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <link rel="stylesheet" type="text/css" href="../node_modules/highlight.js/styles/docco.min.css" />
+    <link rel="stylesheet" type="text/css" href="docco.min.css" />
   </head>
   <body>
     <div class="panel_cont">
